# nessie

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  calibration.nblink  conf.py  datasets.nblink  evaluation.nblink  index.rst  methods.nblink
example_data/: easy_span.conll  easy_text.tsv  easy_token.conll
nessie/: calibration.py  config.py  dataloader.py  evaluation.py  helper.py  metrics.py  noise.py  types.py  util.py
nessie/detectors/: __init__.py  baselines.py  borda_count.py  classification_entropy.py  classification_uncertainty.py  confident_learning.py  curriculum_spotter.py  datamap_confidence.py  dropout_uncertainty.py  ensemble.py  error_detector.py  irt.py  knn_entropy.py  label_aggregation.py  label_entropy.py  leitner_spotter.py  mean_distance.py  prediction_margin.py  projection_ensemble.py  retag.py  variational_principle.py  weighted_discrepancy.py
nessie/models/: __init__.py  featurizer.py  model.py
nessie/models/tagging/: __init__.py  dummy_sequence_classifier.py  flair_sequence_tagger.py  handcrafted_crf_sequence_tagger.py  maxent_sequence_tagger.py  transformer_sequence_tagger.py  util.py
nessie/models/text/: __init__.py  dummy_text_classifier.py  fasttext_text_classifier.py  flair_text_classifier.py  lightgbm_text_classifier.py  maxent_text_classifier.py  sklean_text_classifier.py  svm_text_classifier.py  transformer_text_classifier.py
nessie/task_support/: span_labeling.py
notebooks/: calibration.ipynb  datasets.ipynb  evaluation.ipynb  methods.ipynb
tests/: conftest.py  fixtures.py  test_calibration.py  test_dataloader.py  test_evaluation.py  test_methods.py  test_metrics.py  test_models.py  test_noise.py  test_task_support_span_labeling.py
