[tool.poetry]
name = "nessie"
version = "0.1.0"
description = "Annotation error detection and correction for NLP datasets."
authors = ["Jan-Christoph Klie  <git@mrklie.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.11.0"
flair = "^0.10"
transformers = "^4.16.1"
numpy = "^1.22.1"
scipy = "^1.7.3"
backoff = "^1.11.1"
datasets = "^1.18.2"
pandas = "^1.4.0"
wget = "^3.2"
pyro-ppl = "^1.8.0"
cleanlab = "^1.0"
lightgbm = "^3.3.2"
diskcache = "^5.4.0"
fasttext = "^0.9.2"
cleantext = "^1.1.4"
sentence-transformers = "^2.1.0"
sklearn-crfsuite = "^0.3.6"
seqeval = "^1.2.2"
faiss-cpu = "^1.7.2"
crowd-kit = "^0.0.9"
iobes = "^1.5.1"
suffix-tree = "^0.0.7"
awkward = "^1.7.0"
pytrec-eval-terrier = "^0.5.2"
netcal = "^1.2.1"
pooch = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
poethepoet = "^0.12.2"
black = "^22.1.0"
isort = "^5.10.1"
seaborn = "^0.11.2"
notebook = "^6.4.8"
Sphinx = "^4.4.0"
m2r2 = "^0.3.2"
sphinx-autodoc-typehints = "^1.17.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autoapi = "^1.8.4"
nbsphinx = "^0.8.8"
sphinx-copybutton = "^0.5.0"
nbsphinx-link = "^1.3.0"
nbstripout = "^0.5.0"
pre-commit = "^2.17.0"

[tool.poe.tasks]
force-cuda113 = "python -m pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu113"
force-faiss-gpu = "python -m pip install faiss-gpu"
black = "black -l 120 nessie/ tests/ scripts/"
isort = "isort --profile black nessie/ tests/ scripts/"
format = ["black", "isort"]
sphinx = "sphinx-build -b html docs/source/ docs/build/html -j 4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
